# ndiTracker

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  vcpkg.json
inc/: BX.hpp  INIT.hpp  PENA.hpp  PHINF.hpp  PVWR.hpp  RESET.hpp  TSTART.hpp  TSTOP.hpp  VER.hpp  aurora.hpp  comm.hpp  ndi_command_handler.hpp  ndi_command_tag.hpp  ndi_tracker.hpp  ndi_tracker_tool.hpp  polaris.h  ttcmn.h
ndiTracker/: CMakeLists.txt  ndiTracker.cpp  ndiTracker.h
ndiTracker/inc/: PHRQ.hpp  PHSR.hpp  PINIT.hpp  TX.hpp  aurora.hpp  binary_converter.hpp  ndi_command_base.hpp  ndi_command_handler.hpp  ndi_command_io.hpp  ndi_exception.hpp  ndi_tracker_tool.hpp  ndi_types.hpp  polaris.h  serial_port.hpp
ndiTracker/src/: BX.cpp  polaris.cpp  serial_port.cpp
ndiTrackerPython/: CMakeLists.txt  aurora_test.py  polaris_test.py  python_aurora.h  python_polaris.h
src/: BX.cpp  CMakeLists.txt  COMM.cpp  TX.cpp  aurora.cpp  ndi_command_io.cpp  ndi_exception.cpp  polaris.cpp  python_aurora.cpp  python_export.cpp  python_polaris.cpp  tracking.cpp
test/: polaris_test.cpp
test/aurora/: CMakeLists.txt  aurora_test.cpp
test/polaris/: CMakeLists.txt  polaris_test.cpp  romfiles.txt
